# tek-plexor

./: .gitignore  LICENSE  README  README.md  experiment.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_app.yml
tp_conversion/: converter.py
tp_engine/: yt_api.py
tp_interface/: YtSingleController.py  __init__.py  app.py  debug_logger.py  main_window_ui.py  yt_single_controller.py
tp_interface/shared/: metadata_controller.py  metadata_payload.py  metadata_row_ui.py  metadata_window_ui.py
tp_interface/shared/metadata/: metadata_controller.py  metadata_payload.py  metadata_row_ui.py  metadata_window_ui.py
tp_interface/ui/: main_window.ui  metadata_row.ui  metadata_window.ui
tp_interface/youtube/: yt_download_controller.py  yt_download_worker.py  yt_info_worker.py
utils/: Utils.py
